--- a/railway.toml
+++ b/railway.toml
@@ -13,6 +13,6 @@ internal_port = 8000
 [[headers]]
 for = "/*"
 [headers.values]
-Access-Control-Allow-Origin = "https://avionai.net"
+Access-Control-Allow-Origin = "*"
 Access-Control-Allow-Methods = "GET, POST, OPTIONS"
-Access-Control-Allow-Headers = "Content-Type"
+Access-Control-Allow-Headers = "*"
